# aihub-beauty-auradb-graph

./: .gitignore  README.md  data_inventory.md  pyproject.toml
docs/: auradb_graph_structure.md  auradb_graph_structure_ko.md  db_build.md  db_handoff.md
src/aihub_auradb/: __init__.py  canonical.py  cli.py  contracts.py  env.py  extracted.py  graph_loader.py  ids.py  io.py  manifest.py  models.py  profile.py  quality.py  schema.py  taxonomy.py  zipbatch.py  ziptools.py
tests/: test_pipeline.py
tests/fixtures/aihub_71886/: sample_skincare.json
tests/fixtures/aihub_71961/: sample_makeup.json
